Commit viernes 9am

--- a/crear_figuras_sumarias.ipynb
+++ b/crear_figuras_sumarias.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,17 +43,17 @@
     {
      "data": {
       "text/plain": [
-       "2011-01-01           17.49%\n",
-       "2012-01-01           14.89%\n",
-       "2014-01-01           13.00%\n",
-       "2009-01-01           12.77%\n",
-       "2008-01-01           12.53%\n",
+       "2011                 17.49%\n",
+       "2012                 14.89%\n",
+       "2014                 13.00%\n",
+       "2009                 12.77%\n",
+       "2008                 12.53%\n",
        "[OTROS] (3 tipos)    29.31%\n",
        "[NA (0%)]             0.00%\n",
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -105,19 +105,19 @@
     {
      "data": {
       "text/plain": [
-       "2011-01-01    0.174941\n",
-       "2012-01-01    0.148936\n",
-       "2014-01-01    0.130024\n",
-       "2009-01-01    0.127660\n",
-       "2008-01-01    0.125296\n",
-       "2010-01-01    0.101655\n",
-       "2006-01-01    0.101655\n",
-       "2007-01-01    0.089835\n",
-       "[NA (0%)]     0.000000\n",
+       "2011         0.174941\n",
+       "2012         0.148936\n",
+       "2014         0.130024\n",
+       "2009         0.127660\n",
+       "2008         0.125296\n",
+       "2010         0.101655\n",
+       "2006         0.101655\n",
+       "2007         0.089835\n",
+       "[NA (0%)]    0.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,13 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def figura_hist(s, fig, ax):\n",
+    "try:\n",
+    "    os.mkdir('figuras/explorar/')\n",
+    "except OSError:\n",
+    "    pass\n",
+    "\n",
+    "def figura_hist(s, fig, ax, figname):\n",
     "    s = s.astype(float)\n",
     "    s.hist(ax=ax, color=COLOR_HIST, weights=np.zeros(s.count()) + 1. / len(s),\n",
     "           alpha=BAR_ALPHA)\n",
@@ -147,19 +152,19 @@
     "    ax.legend(loc='upper right')\n",
     "    if RUGPLOT:\n",
     "        sns.rugplot(s, color=COLOR_HIST, alpha=1.0, ax=ax)\n",
-    "    fig.savefig('figuras/explorar_hist_%s.png' % figname)\n",
+    "    fig.savefig('figuras/explorar/hist_%s.png' % figname)\n",
     "\n",
-    "def figura_bar(s, fig, ax):\n",
+    "def figura_bar(s, fig, ax, figname):\n",
     "    s = smart_value_counts(s)\n",
     "    s[::-1].plot(ax=ax, kind='barh', color=[COLOR_NA] +\n",
     "                 [COLOR_BAR]*(len(s) - 1), alpha=BAR_ALPHA)\n",
     "    ax.set_xticklabels(['%.0f%%' % (t*100) for t in ax.get_xticks()])\n",
-    "    fig.savefig('figuras/explorar_bar_%s.png' % figname)"
+    "    fig.savefig('figuras/explorar/bar_%s.png' % figname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +176,7 @@
       "[1/35] analisis_suelo_k (float)\n",
       "[2/35] analisis_suelo_n (float)\n",
       "[3/35] analisis_suelo_p (float)\n",
-      "[4/35] campana (categorico)\n",
+      "[4/35] campana (float)\n",
       "[5/35] cultivo_antecesor (categorico)\n",
       "[6/35] densidad_siembra_kg_ha (float)\n",
       "[7/35] factor_rend_densidad_pl_m2 (categorico)\n",
@@ -203,7 +208,7 @@
       "[33/35] sistema_laboreo (categorico)\n",
       "[34/35] superficie_has (float)\n",
       "[35/35] variedad (categorico)\n",
-      "Columnos: [17 numericos, 18 categoricos, 0 saltados (vacios), 35 total]\n"
+      "Columnos: [18 numericos, 17 categoricos, 0 saltados (vacios), 35 total]\n"
      ]
     }
    ],
@@ -215,7 +220,7 @@
     "COLOR_BAR = sns.color_palette()[1]\n",
     "COLOR_NA = (.8, .2, .2)\n",
     "BAR_ALPHA = 0.8\n",
-    "RUGPLOT = True\n",
+    "RUGPLOT = False\n",
     "\n",
     "saltados, numericos = 0, 0\n",
     "for i, c in enumerate(sorted(df.columns)):\n",
@@ -232,11 +237,11 @@
     "    figname = ''.join([ch for ch in c.lower().replace(' ', '_')\n",
     "                       if ch.isalnum() or ch in ('_-')])\n",
     "    try:\n",
-    "        figura_hist(s, fig, ax)\n",
+    "        figura_hist(s, fig, ax, figname)\n",
     "        numericos += 1\n",
     "        print '(float)'\n",
     "    except ValueError:\n",
-    "        figura_bar(s, fig, ax)\n",
+    "        figura_bar(s, fig, ax, figname)\n",
     "        print '(categorico)'\n",
     "    plt.close()\n",
     "\n",
@@ -246,293 +251,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>densidad_siembra_kg_ha</th>\n",
-       "      <th>analisis_suelo_n</th>\n",
-       "      <th>analisis_suelo_p</th>\n",
-       "      <th>analisis_suelo_k</th>\n",
-       "      <th>fert_cober_preriego_cant_n_kg_ha</th>\n",
-       "      <th>fert_cober_dpf_cant_n_kg_ha</th>\n",
-       "      <th>fert_cober_clk_cant_kg_ha</th>\n",
-       "      <th>fenologia_emerg_dpf_dias</th>\n",
-       "      <th>riego_velocidad_dias</th>\n",
-       "      <th>riego_emerg_lote_completo_dias</th>\n",
-       "      <th>fenologia_emerg_flor_50pct_dias</th>\n",
-       "      <th>fenologia_emerg_cosecha_dias</th>\n",
-       "      <th>factor_rend_pcthcosecha</th>\n",
-       "      <th>rendimiento_seco_kg_ha</th>\n",
-       "      <th>factor_rend_pctfactor</th>\n",
-       "      <th>rinde_con_factor_kg_ha</th>\n",
-       "      <th>superficie_has</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>423.000000</td>\n",
-       "      <td>372.000000</td>\n",
-       "      <td>372.000000</td>\n",
-       "      <td>361.000000</td>\n",
-       "      <td>311.00000</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>114.000000</td>\n",
-       "      <td>249.00000</td>\n",
-       "      <td>385.000000</td>\n",
-       "      <td>385.000000</td>\n",
-       "      <td>423.000000</td>\n",
-       "      <td>385.000000</td>\n",
-       "      <td>382.000000</td>\n",
-       "      <td>423.000000</td>\n",
-       "      <td>327.000000</td>\n",
-       "      <td>330.000000</td>\n",
-       "      <td>423.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>103.966903</td>\n",
-       "      <td>10.828387</td>\n",
-       "      <td>23.075827</td>\n",
-       "      <td>37.780709</td>\n",
-       "      <td>47.16701</td>\n",
-       "      <td>32.572800</td>\n",
-       "      <td>54.433368</td>\n",
-       "      <td>52.48996</td>\n",
-       "      <td>5.529870</td>\n",
-       "      <td>26.677922</td>\n",
-       "      <td>90.846336</td>\n",
-       "      <td>131.137662</td>\n",
-       "      <td>20.229843</td>\n",
-       "      <td>7006.091686</td>\n",
-       "      <td>0.970690</td>\n",
-       "      <td>6960.750929</td>\n",
-       "      <td>38.653097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>14.632750</td>\n",
-       "      <td>6.210559</td>\n",
-       "      <td>13.491036</td>\n",
-       "      <td>19.829912</td>\n",
-       "      <td>10.68954</td>\n",
-       "      <td>10.774992</td>\n",
-       "      <td>26.251850</td>\n",
-       "      <td>6.01216</td>\n",
-       "      <td>2.997354</td>\n",
-       "      <td>7.775506</td>\n",
-       "      <td>8.282485</td>\n",
-       "      <td>10.872809</td>\n",
-       "      <td>3.437030</td>\n",
-       "      <td>1451.891081</td>\n",
-       "      <td>0.090794</td>\n",
-       "      <td>1651.947275</td>\n",
-       "      <td>17.409731</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>45.000000</td>\n",
-       "      <td>3.700000</td>\n",
-       "      <td>8.720000</td>\n",
-       "      <td>2.490000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>24.900000</td>\n",
-       "      <td>40.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>107.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>2478.160920</td>\n",
-       "      <td>0.523500</td>\n",
-       "      <td>2427.358621</td>\n",
-       "      <td>0.900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>98.000000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>13.080000</td>\n",
-       "      <td>29.880000</td>\n",
-       "      <td>46.00000</td>\n",
-       "      <td>27.600000</td>\n",
-       "      <td>39.840000</td>\n",
-       "      <td>45.00000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>22.000000</td>\n",
-       "      <td>84.500000</td>\n",
-       "      <td>124.000000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>6010.236697</td>\n",
-       "      <td>0.933000</td>\n",
-       "      <td>5741.582064</td>\n",
-       "      <td>27.700000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>7.500000</td>\n",
-       "      <td>19.349680</td>\n",
-       "      <td>35.400000</td>\n",
-       "      <td>46.00000</td>\n",
-       "      <td>27.600000</td>\n",
-       "      <td>39.840000</td>\n",
-       "      <td>53.00000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>26.000000</td>\n",
-       "      <td>91.000000</td>\n",
-       "      <td>131.000000</td>\n",
-       "      <td>20.400000</td>\n",
-       "      <td>7158.106371</td>\n",
-       "      <td>0.997500</td>\n",
-       "      <td>7228.050798</td>\n",
-       "      <td>37.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>110.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>23.544000</td>\n",
-       "      <td>43.160000</td>\n",
-       "      <td>46.00000</td>\n",
-       "      <td>36.800000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>58.00000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>97.000000</td>\n",
-       "      <td>138.000000</td>\n",
-       "      <td>22.700000</td>\n",
-       "      <td>8067.185152</td>\n",
-       "      <td>1.030500</td>\n",
-       "      <td>8203.673237</td>\n",
-       "      <td>47.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>162.000000</td>\n",
-       "      <td>25.200000</td>\n",
-       "      <td>63.000000</td>\n",
-       "      <td>86.320000</td>\n",
-       "      <td>101.20000</td>\n",
-       "      <td>69.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>64.00000</td>\n",
-       "      <td>34.000000</td>\n",
-       "      <td>54.000000</td>\n",
-       "      <td>112.000000</td>\n",
-       "      <td>163.000000</td>\n",
-       "      <td>29.500000</td>\n",
-       "      <td>10905.340622</td>\n",
-       "      <td>1.101000</td>\n",
-       "      <td>10981.678007</td>\n",
-       "      <td>123.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       densidad_siembra_kg_ha  analisis_suelo_n  analisis_suelo_p  \\\n",
-       "count              423.000000        372.000000        372.000000   \n",
-       "mean               103.966903         10.828387         23.075827   \n",
-       "std                 14.632750          6.210559         13.491036   \n",
-       "min                 45.000000          3.700000          8.720000   \n",
-       "25%                 98.000000          7.000000         13.080000   \n",
-       "50%                100.000000          7.500000         19.349680   \n",
-       "75%                110.000000         20.000000         23.544000   \n",
-       "max                162.000000         25.200000         63.000000   \n",
-       "\n",
-       "       analisis_suelo_k  fert_cober_preriego_cant_n_kg_ha  \\\n",
-       "count        361.000000                         311.00000   \n",
-       "mean          37.780709                          47.16701   \n",
-       "std           19.829912                          10.68954   \n",
-       "min            2.490000                           0.00000   \n",
-       "25%           29.880000                          46.00000   \n",
-       "50%           35.400000                          46.00000   \n",
-       "75%           43.160000                          46.00000   \n",
-       "max           86.320000                         101.20000   \n",
-       "\n",
-       "       fert_cober_dpf_cant_n_kg_ha  fert_cober_clk_cant_kg_ha  \\\n",
-       "count                   250.000000                 114.000000   \n",
-       "mean                     32.572800                  54.433368   \n",
-       "std                      10.774992                  26.251850   \n",
-       "min                      23.000000                  24.900000   \n",
-       "25%                      27.600000                  39.840000   \n",
-       "50%                      27.600000                  39.840000   \n",
-       "75%                      36.800000                  80.000000   \n",
-       "max                      69.000000                 100.000000   \n",
-       "\n",
-       "       fenologia_emerg_dpf_dias  riego_velocidad_dias  \\\n",
-       "count                 249.00000            385.000000   \n",
-       "mean                   52.48996              5.529870   \n",
-       "std                     6.01216              2.997354   \n",
-       "min                    40.00000              0.000000   \n",
-       "25%                    45.00000              4.000000   \n",
-       "50%                    53.00000              5.000000   \n",
-       "75%                    58.00000              7.000000   \n",
-       "max                    64.00000             34.000000   \n",
-       "\n",
-       "       riego_emerg_lote_completo_dias  fenologia_emerg_flor_50pct_dias  \\\n",
-       "count                      385.000000                       423.000000   \n",
-       "mean                        26.677922                        90.846336   \n",
-       "std                          7.775506                         8.282485   \n",
-       "min                          2.000000                        72.000000   \n",
-       "25%                         22.000000                        84.500000   \n",
-       "50%                         26.000000                        91.000000   \n",
-       "75%                         32.000000                        97.000000   \n",
-       "max                         54.000000                       112.000000   \n",
-       "\n",
-       "       fenologia_emerg_cosecha_dias  factor_rend_pcthcosecha  \\\n",
-       "count                    385.000000               382.000000   \n",
-       "mean                     131.137662                20.229843   \n",
-       "std                       10.872809                 3.437030   \n",
-       "min                      107.000000                12.000000   \n",
-       "25%                      124.000000                18.000000   \n",
-       "50%                      131.000000                20.400000   \n",
-       "75%                      138.000000                22.700000   \n",
-       "max                      163.000000                29.500000   \n",
-       "\n",
-       "       rendimiento_seco_kg_ha  factor_rend_pctfactor  rinde_con_factor_kg_ha  \\\n",
-       "count              423.000000             327.000000              330.000000   \n",
-       "mean              7006.091686               0.970690             6960.750929   \n",
-       "std               1451.891081               0.090794             1651.947275   \n",
-       "min               2478.160920               0.523500             2427.358621   \n",
-       "25%               6010.236697               0.933000             5741.582064   \n",
-       "50%               7158.106371               0.997500             7228.050798   \n",
-       "75%               8067.185152               1.030500             8203.673237   \n",
-       "max              10905.340622               1.101000            10981.678007   \n",
-       "\n",
-       "       superficie_has  \n",
-       "count      423.000000  \n",
-       "mean        38.653097  \n",
-       "std         17.409731  \n",
-       "min          0.900000  \n",
-       "25%         27.700000  \n",
-       "50%         37.000000  \n",
-       "75%         47.400000  \n",
-       "max        123.000000  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clima_esol\n",
+      "clima_rain\n",
+      "clima_rhum\n",
+      "clima_tmax\n",
+      "clima_tmin\n"
+     ]
     }
    ],
    "source": [
-    "sumario = df.describe()\n",
-    "sumario"
+    "clima = pd.read_csv('datos/clima_datos_unidos.csv', index_col='Date')\n",
+    "for c in clima.columns:\n",
+    "    figname = 'clima_' + c.lower()\n",
+    "    print figname\n",
+    "    fig, ax = plt.subplots(1)\n",
+    "    fig.subplots_adjust(left=0.2)\n",
+    "    ax.set_title(c)\n",
+    "    s = clima[c]\n",
+    "    figura_hist(s, fig, ax, figname)\n",
+    "    plt.close()"
    ]
   },
   {
